# AmazingPixelGame

./: .gitignore  CMakeLists.txt  EMScriptenBuild.sh  G++BuildRun.sh  LICENSE  README.md  debug_build.sh  debug_build_run.sh  index.data  release_build.sh  release_build_run.sh
src/: Game.cpp  Game.h  GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  PlayingState.cpp  PlayingState.h  main.cpp
src/Controls/: Keyboard.cpp  Keyboard.h
src/GFX/: Bitmap.cpp  Bitmap.h  BitmapMapping.cpp  BitmapMapping.h  Colors.h  Drawable.h  Font.cpp  Font.h  Graphics.cpp  Graphics.h
src/GameMechanics/: Enemy.h  EnemyAI.cpp  EnemyAI.h  MapBackground.cpp  MapBackground.h  PlateAI.cpp  PlateAI.h  PlateEnemy.cpp  PlateEnemy.h  Player.cpp  Player.h  RadiiAI.h  RadiiEnemy.cpp  RadiiEnemy.h  Star.cpp  Star.h
src/GameMechanics/Camera/: Camera.h
src/Physics/: Vector2D.h
